add desc experience

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img class="disp-experience1" src="assets/images/exp1.jpg" alt="experience 1">
                 <div class="text-experience1">
                     <h2 class="judul-1">Play Music Festival 2023</h2>
-                    <p class="desc-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, ut perferendis beatae nobis obcaecati cum nulla, soluta vero omnis laboriosam repellendus! Veritatis nam magnam totam tempora excepturi sed explicabo alias.</p>
+                    <p class="desc-1">Being part of the documentation team for artists in the music festival held by "Gudang Baru" which featured several performers, namely Dewa 19 feat Virzha, Andra and the Backbone, Qodir, Danila, Ikhsan Skuter, Atlesta.</p>
                 </div>
             </div>
 
@@ -68,7 +68,7 @@
                 <iframe class="disp-experience2" src="https://www.youtube.com/embed/69gqajA9KgQ?si=I2Ai_jZq5naaIQ4a"> </iframe>
                 <div class="text-experience2">
                     <h2 class="judul-2">IdeaCloud Conference 2023</h2>
-                    <p class="desc-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, ut perferendis beatae nobis obcaecati cum nulla, soluta vero omnis laboriosam repellendus! Veritatis nam magnam totam tempora excepturi sed explicabo alias.</p>
+                    <p class="desc-2">Become a same day video editor, this is a very big event for business lovers which is attended by very popular presenters ranging from Nadiem Makarim, Hotman Paris, Dr. Richard Lee, Jerome Polin, and many more.</p>
                 </div>
             </div>
         </section>
