--- a/index.html
+++ b/index.html
@@ -82,18 +82,28 @@
 
         <!-- END VIDEOGRAPHY -->
 
+        <!-- HERO -->
+        <div class="hero">
+            <div class="hero-overlay"></div>
+            <div class="hero-content">
+                <h1>Always Ready To Take A Perfect Shot</h1>
+                <a href="https://wa.me/628885443042" class="hero-btn">Contact</a>
+            </div>
+        </div>
+        <!-- END HERO -->
     </main>
 
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="name">DEA PRIMA</div>
         <div class="description">
             freelance photographer and videographer
         </div>
         <div class="contact">
-            <a href="https://www.instagram.com/de_prim" target="_blank">
+            <a href="https://www.instagram.com/de_prim" >
                 <i class="fab fa-instagram"></i> de_prim
             </a>
-            <a href="https://wa.me/628885443042" target="_blank">
+            <a href="https://wa.me/628885443042" >
                 <i class="fab fa-whatsapp"></i> +62 888 5443 042
             </a>
             <a href="mailto:deaprima209@gmail.com">
@@ -101,6 +111,7 @@
             </a>
         </div>
     </footer>
+    <!-- END FOOTER -->
 
     <script src="js/main.js"></script>
 </body>
