--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio Dea Prima</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/about-style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/about-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 
@@ -33,6 +33,24 @@
     </nav>
     <!-- END NAVBAR -->
 
+    <!-- MAIN -->
+    <main>
+        <div class="about-container">
+            <div class="about-text-section">
+                <h2>Hello I'm</h2>
+                <h1>DEA PRIMA</h1>
+                <p>A freelance photographer and videographer, I capture the essence of moments with captivating creativity and flair, giving each story a visual story that is not only seen, but also felt.</p>
+                <div class="about-buttons">
+                    <a href="https://drive.google.com/file/d/1RYVKsFyVKZ3JfND2t9m4gQs4_jwCrFIK/view?usp=sharing" class="btn">Download CV</a>
+                    <a href="https://wa.me/628885443042" class="btn">Contact</a>
+                </div>
+            </div>
+            <div class="about-image-section">
+                <img src="assets/Icon/Me 2.png" alt="Dea Prima">
+            </div>
+        </div>
+    </main>
+    <!-- END MAIN -->
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -41,10 +59,10 @@
             freelance photographer and videographer
         </div>
         <div class="contact">
-            <a href="https://www.instagram.com/de_prim" target="_blank">
+            <a href="https://www.instagram.com/de_prim">
                 <i class="fab fa-instagram"></i> de_prim
             </a>
-            <a href="https://wa.me/628885443042" target="_blank">
+            <a href="https://wa.me/628885443042">
                 <i class="fab fa-whatsapp"></i> +62 888 5443 042
             </a>
             <a href="mailto:deaprima209@gmail.com">
@@ -54,6 +72,8 @@
     </footer>
     <!-- END FOOTER -->
 
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
