--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
         <!-- END VIDEOGRAPHY -->
 
         <!-- HERO -->
-        <div class="hero">
+        <div class="hero" style="background-image: url('assets/images/hero.jpg');">
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Always Ready To Take A Perfect Shot</h1>
                 <a href="https://wa.me/628885443042" class="hero-btn">Contact</a>
             </div>
-        </div>
+        </div>        
         <!-- END HERO -->
     </main>
 
